--- a/cyclotron/Base.lproj/Main.storyboard
+++ b/cyclotron/Base.lproj/Main.storyboard
@@ -213,7 +213,7 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RsS-JK-rGM">
                                 <rect key="frame" x="0.0" y="62" width="375" height="357"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="2score" translatesAutoresizingMaskIntoConstraints="NO" id="8sE-13-z19">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0score" translatesAutoresizingMaskIntoConstraints="NO" id="8sE-13-z19">
                                         <rect key="frame" x="37" y="29" width="300" height="300"/>
                                     </imageView>
                                 </subviews>
@@ -273,6 +273,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="scoreImage" destination="8sE-13-z19" id="3SA-K9-qed"/>
                         <outlet property="tableView" destination="tOL-Ho-FuQ" id="116-9q-tVV"/>
                     </connections>
                 </viewController>
@@ -282,7 +283,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="2score" width="238" height="261"/>
+        <image name="0score" width="487" height="476"/>
         <image name="5boro2012_0157" width="750" height="1334"/>
         <image name="Bike Today? button" width="628" height="79"/>
         <image name="begin button" width="507" height="79"/>
